--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-brazildocs.core",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Provides a set of classes to handle and validate Brazilian documents",
   "main": "index.js",
   "module": "./dist/index.mjs",
@@ -14,6 +14,17 @@
   },
   "author": "Rodrigo Ramos Silva",
   "license": "MIT",
+  "keywords": [
+    "cpf",
+    "Brazilian",
+    "document",
+    "validation",
+    "validator"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rodrigoramos/ts-brazildocs.core.git"
+  },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
@@ -22,9 +33,5 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
     "typescript": "^5.6.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rodrigoramos/ts-brazildocs.core.git"
   }
 }
